fixed buttons on mobile

--- a/www/css/styles.mobile.less
+++ b/www/css/styles.mobile.less
@@ -107,8 +107,13 @@
                 width: 155px;
             }
             .badge {
-                top: 6px;
+                top: 2px;
             }
+        }
+        .badge {
+            position: absolute;
+            top: 1px;
+            right: 3px;
         }
         .place {
             margin: 0;
